# rust-host-keccak256

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README  zk-build.sh
playground/: zk-build.sh
playground/batch/: batch.json
src/: keccak256.rs  lib.rs  main.rs
