[package]
name = "zkwasm-host-keccak256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]




[dependencies]
#rlp = { version = "0.5.2", default-features = false }
byteorder = "1.4.3"
wasm-bindgen = "0.2.83"

