[package]
name = "zkwasm-host-keccak256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]




[dependencies]
#rlp = { version = "0.5.2", default-features = false }
byteorder = "1.4.3"
wasm-bindgen = "0.2.83"
sha3 = "0.10.8"
zkwasm-host-circuits = { git = "https://github.com/DelphinusLab/zkWasm-host-circuits.git", branch="main" }

