[package]
name = "zkwasm-host-keccak256"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]




[dependencies]
#rlp = { version = "0.5.2", default-features = false }
byteorder = "1.4.3"
wasm-bindgen = "0.2.83"
sha3 = "0.10.8"
itertools = "0.10.0"
rand = "0.8"
rand_core = "0.6"
lazy_static = "1.4.0"
getrandom = { version = "0.2", features = ["js"] }


